Rename ds.summary() as ds.info()

--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "net.dataset.summary()"
+    "net.dataset.info()"
    ]
   },
   {
@@ -1392,7 +1392,7 @@
     "net.dataset.get('mnist')\n",
     "net.dataset.set_targets_from_inputs()\n",
     "net.dataset.targets.reshape(0, (28 * 28))\n",
-    "net.dataset.summary()"
+    "net.dataset.info()"
    ]
   },
   {
