--- a/Datasets.ipynb
+++ b/Datasets.ipynb
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "net.dataset.summary()"
+    "net.dataset.info()"
    ]
   },
   {
@@ -356,7 +356,7 @@
     }
    ],
    "source": [
-    "net.dataset.summary()"
+    "net.dataset.info()"
    ]
   },
   {
