--- a/XOR.ipynb
+++ b/XOR.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "net.dataset.clear()\n",
     "net.dataset.load(dataset)\n",
-    "net.dataset.summary()"
+    "net.dataset.info()"
    ]
   },
   {
