--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -87,7 +87,7 @@
     "    ([1, 1], [0], \"4\")\n",
     "]\n",
     "net.dataset.load(XOR)\n",
-    "net.dataset.summary()\n",
+    "net.dataset.info()\n",
     "\n",
     "net.compile(loss='mean_squared_error', optimizer=cx.SGD(lr=0.3, momentum=0.9))"
    ]
