Dataset.add -> Dataset.append

--- a/Camera.ipynb
+++ b/Camera.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net.dataset.add(data, cx.to_categorical(1, 10))"
+    "net.dataset.append(data, cx.to_categorical(1, 10))"
    ]
   },
   {
