--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -63,7 +63,7 @@
     "    print(\"category %s running...\" % category)\n",
     "    net = cx.Network(\"XOR\", 2, 2, 1, activation=activation)\n",
     "    net.compile(error=\"mse\", optimizer=optimizer)\n",
-    "    net.dataset.add_by_function(2, (0, 4), \"binary\", lambda i,v: [int(sum(v) == len(v))])\n",
+    "    net.dataset.append_by_function(2, (0, 4), \"binary\", lambda i,v: [int(sum(v) == len(v))])\n",
     "    net.train(report_rate=10000, verbose=0, plot=False, **options)\n",
     "    return category, net"
    ]
