--- a/Getting Started with conx.ipynb
+++ b/Getting Started with conx.ipynb
@@ -544,10 +544,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net.dataset.add([0, 0], [0])\n",
-    "net.dataset.add([0, 1], [1])\n",
-    "net.dataset.add([1, 0], [1])\n",
-    "net.dataset.add([1, 1], [0])"
+    "net.dataset.append([0, 0], [0])\n",
+    "net.dataset.append([0, 1], [1])\n",
+    "net.dataset.append([1, 0], [1])\n",
+    "net.dataset.append([1, 1], [0])"
    ]
   },
   {
