--- a/Plot3D.ipynb
+++ b/Plot3D.ipynb
@@ -178,10 +178,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net.dataset.add([-1, -1], [-1])\n",
-    "net.dataset.add([-1, +1], [+1])\n",
-    "net.dataset.add([+1, -1], [+1])\n",
-    "net.dataset.add([+1, +1], [-1])"
+    "net.dataset.append([-1, -1], [-1])\n",
+    "net.dataset.append([-1, +1], [+1])\n",
+    "net.dataset.append([+1, -1], [+1])\n",
+    "net.dataset.append([+1, +1], [-1])"
    ]
   },
   {
