--- a/Datasets.ipynb
+++ b/Datasets.ipynb
@@ -288,9 +288,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net.dataset.add([0, 0, 0, 0, 1], [1])\n",
-    "net.dataset.add([0, 0, 0, 1, 1], [0])\n",
-    "net.dataset.add([0, 0, 1, 0, 0], [1])"
+    "net.dataset.append([0, 0, 0, 0, 1], [1])\n",
+    "net.dataset.append([0, 0, 0, 1, 1], [0])\n",
+    "net.dataset.append([0, 0, 1, 0, 0], [1])"
    ]
   },
   {
@@ -311,7 +311,7 @@
     "for i in range(2 ** 5):\n",
     "    inputs = num2bin(i)\n",
     "    targets = [int(sum(inputs) % 2 == 1.0)]\n",
-    "    net.dataset.add(inputs, targets)"
+    "    net.dataset.append(inputs, targets)"
    ]
   },
   {
