Updated optimizer arguments

--- a/CIFAR10_CNN.ipynb
+++ b/CIFAR10_CNN.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "net.compile(error='categorical_crossentropy',\n",
-    "            optimizer=cx.RMSprop(lr=0.0001, decay=1e-6))"
+    "            optimizer='rmsprop', lr=0.0001, decay=1e-6)"
    ]
   },
   {
