--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -89,7 +89,7 @@
     "net.dataset.load(XOR)\n",
     "net.dataset.info()\n",
     "\n",
-    "net.compile(loss='mean_squared_error', optimizer=cx.SGD(lr=0.3, momentum=0.9))"
+    "net.compile(loss='mean_squared_error', optimizer='sgd', lr=0.3, momentum=0.9)"
    ]
   },
   {
@@ -1122,7 +1122,7 @@
     "    ([1, 0], [1], \"3\"),\n",
     "    ([1, 1], [0], \"4\")\n",
     "]\n",
-    "net.compile(loss='mean_squared_error', optimizer=cx.SGD(lr=0.3, momentum=0.9))\n",
+    "net.compile(loss='mean_squared_error', optimizer='sgd', lr=0.3, momentum=0.9)\n",
     "net.dataset.load(XOR)"
    ]
   },
