--- a/Camera.ipynb
+++ b/Camera.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n",
+      "Using Theano backend.\n",
       "Conx, version 3.6.0\n"
      ]
     }
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "net = cx.Network(\"Camera Network\")\n",
-    "net.add(cx.ImageLayer(\"camera\", (240, 320), 3))\n",
-    "net.add(cx.Conv2DLayer(\"conv2d\", 32, (3,3)))\n",
-    "net.add(cx.MaxPool2DLayer(\"maxpool\", (2,2)))\n",
-    "net.add(cx.FlattenLayer(\"flatten\"))\n",
-    "net.add(cx.Layer(\"output\", 10))\n",
+    "net.add(cx.ImageLayer(\"camera\", (240, 320), 3),\n",
+    "        cx.Conv2DLayer(\"conv2d\", 32, (3,3)),\n",
+    "        cx.MaxPool2DLayer(\"maxpool\", (2,2)),\n",
+    "        cx.FlattenLayer(\"flatten\"),\n",
+    "        cx.Layer(\"output\", 10))\n",
     "net.connect()\n",
     "net.compile(error=\"mse\", optimizer=\"adam\")"
    ]
