--- a/collections/sigcse-2018/00_Setup.ipynb
+++ b/collections/sigcse-2018/00_Setup.ipynb
@@ -4,56 +4,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Software Setup\n",
+    "<h1>Deep Learning in the Classroom: <br>\n",
+    "Workshop Software Setup Options</h1>\n",
     "\n",
-    "## Don't Install\n",
+    "You should have picked one of the 4 following options, summarized below:\n",
     "\n",
-    "Rather than installing conx, consider one of the following pre-built options:\n",
+    "## 1. Conx in the Cloud\n",
+    "\n",
+    "Rather than installing conx, consider running through the MyBinder service:\n",
     "\n",
     "* MyBinder: **mybinder.org/v2/gh/Calysto/conx/master**\n",
-    "* Use our Conx Docker container.\n",
-    "* VirtualBox: **science.slc.edu/jmarshall/virtualbox-conx-3.6.0.ova**\n",
     "\n",
-    "## Some Install\n",
+    "These services are available on a first come/first serve basis.\n",
+    "\n",
+    "## 2. Virtual Machine Options\n",
+    "\n",
+    "* Use our Conx Docker container:\n",
+    "  * `docker run --rm -v \"$PWD\":/home/jovyan/work -p 8888:8888 calysto/conx`\n",
+    "* Use our VirtualBox image: \n",
+    "  * **science.slc.edu/jmarshall/virtualbox-conx-3.6.0.ova**\n",
+    "\n",
+    "## 3. Jupyter in the Cloud + pip conx\n",
     "\n",
     "Each of these will require that you install conx, and do some other setup:\n",
     "\n",
     "* Use one of the online, freely available Jupyter servers, including:\n",
-    "  * Google's Colabatory: **colab.research.google.com**\n",
+    "  * Google's Colaboratory: **colab.research.google.com**\n",
     "  * SageMath's Cocalc: **cocalc.com**\n",
     "  * Microsoft's Azure: **notebooks.azure.com**\n",
     "  * IBM's Cognitive Class: **datascientistworkbench.com**\n",
     "\n",
-    "## Personal Install \n",
+    "## 4. Local Install\n",
     "\n",
     "* Use Anaconda, plus pip installs\n",
-    "* Generic Python3 environment\n",
+    "* Generic Python3 environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "# Checkpoint #1\n",
     "\n",
-    "Make sure `conx` is installed and usable.\n",
+    "\n",
+    "\n",
+    "# Checkpoint #1: Conx is Installed and Usable\n",
     "\n",
     "VirtualBox users:\n",
     "\n",
     "1. Click on Terminal icon in upper-left corner\n",
     "2. Type `jupyter notebook` and press `Return`\n",
-    "3. In Firefox, click on the `New` button in upper-right corner, and select `Python 3`"
+    "3. In Firefox, click on the `New` button in upper-right corner, and select `Python 3`\n",
+    "\n",
+    "All users:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enter `import conx as cx` and press `Shift+Return`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using Theano backend.\n",
-      "Conx, version 3.6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import conx as cx"
    ]
@@ -62,21 +79,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enter `import conx as cx` and press `Shift+Return`\n",
-    "\n",
     "You should see:\n",
     "\n",
     "```\n",
-    "Using Theano backend.\n",
-    "Conx, version 3.6.0\n",
-    "```"
+    "Using TensorFlow backend.\n",
+    "Conx, version 3.6.x\n",
+    "```\n",
+    "\n",
+    "where x is 0 or 1."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checkpoint #2\n",
+    "# Checkpoint #2: Download and Trust Notebooks\n",
     "\n",
     "Get the `conx-notebooks` and make them trusted."
    ]
@@ -85,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enter the following command. This will download a 32 MB file and unzip it to about 75 MB directory named `conx-notebooks-master`."
+    "Enter the following command. This will download a 32 MB file and unzip it to an about 75 MB directory named `conx-notebooks-master`."
    ]
   },
   {
@@ -95,6 +112,13 @@
    "outputs": [],
    "source": [
     "cx.download(\"https://github.com/Calysto/conx-notebooks/archive/master.zip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can tell the system to \"trust\" the notebooks with the following command:"
    ]
   },
   {
@@ -110,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the `File` menu select `Close and Halt`."
+    "From the `File` menu select `Close and Halt`. You are ready to begin!"
    ]
   }
  ],
