--- a/collections/sigcse-2018/00_Agenda.ipynb
+++ b/collections/sigcse-2018/00_Agenda.ipynb
@@ -18,47 +18,40 @@
    "source": [
     "**Agenda**\n",
     "\n",
-    "1. [Introductions](01_Introductions.ipynb) - Doug Blank (15 minutes) 0:15\n",
-    "  * Setup\n",
-    "  * Meet and Greet\n",
-    "  * Overview of workshop\n",
-    "  * Deep Learning in the Classroom\n",
-    "\n",
-    "2. Introduction to the Jupyter Notebook - Doug Blank (5 minutes) 0:20\n",
-    "  \n",
-    "3. Introduction to Conx - Lisa Meeden (30 minutes) 0:50\n",
-    "  * Neural Network jargon\n",
-    "  * Simple logic functions\n",
-    "  * Linear/non-linear separated functions\n",
-    "  * Analysis of Generalization\n",
-    "\n",
-    "4. Independent Work - all (10 minutes) 1:00\n",
-    "\n",
-    "5. [Handwritten digit recognition](../../MNIST.ipynb) - Jim Marshall (30 Minutes) 1:30\n",
+    "1. [Introductions](01_Introductions.ipynb) - Doug Blank (20 minutes) 0:20\n",
+    "   * Your Teacher's Assistants\n",
+    "   * Workshop\n",
+    "     1. Laboratory-style\n",
+    "     1. Use your post-it notes to signal us\n",
+    "     2. Feel free to ask questions/make comments at any time\n",
+    "   * Deep Learning\n",
+    "   * Jupyter Notebook\n",
+    "   * Conx\n",
+    "     1. Pronunciation `con ex` as is \"connects\" or \"connectionism\"\n",
+    "     2. Philosophy\n",
+    "     3. The deep learning software stack\n",
+    "2. [Getting Started with Conx](02_Conx.ipynb) - Lisa Meeden (30 minutes) 0:50\n",
+    "   *  Independent Work - all (10 minutes) 1:00\n",
+    "3. [Handwritten digit recognition](03_MNIST.ipynb) - Jim Marshall (30 Minutes) 1:30\n",
     "  * Vision, the MNIST Dataset, and Convolution\n",
-    "\n",
-    "6. Independent Work - all (15 minutes) 1:45\n",
-    "\n",
-    "7. Datasets and Variations - Doug Blank (30 Minutes) 2:15\n",
+    "  * Independent Work - all (15 minutes) 1:45\n",
+    "4. Datasets and Variations - Doug Blank (30 Minutes) 2:15\n",
     "  * Datasets:\n",
     "    * CMU Faces - faces and poses\n",
-    "    * Fingers - fingers and counts\n",
     "    * CIFAR - 10 and 100 object recognition\n",
-    "    * Gridfonts - Hofstadter's gridfonts\n",
-    "  * Other models:\n",
+    "    * Fingers - fingers and counts\n",
+    "   * Other models:\n",
     "    * Text Generation - text generation\n",
-    "    * Deep Dreams - generate images\n",
     "    * AlphaZero - best game-playing program in the world\n",
-    "\n",
-    "8. Independent Work - All (15 minutes) 2:30\n",
-    "\n",
-    "9. Use in the Classroom - All (15 minutes) 2:45\n",
+    "    * Deep Dreams - generate images\n",
+    "5. Independent Work - All (15 minutes) 2:30\n",
+    "6. Discussion - All (30 minutes) 3:00\n",
+    "  * How can you work Deep Learning into your classroom?\n",
     "  * lesson plans\n",
     "  * projects\n",
     "  * activities\n",
-    "  \n",
-    "10. Discussion - All (15 minutes) 3:00\n",
-    "  * How can you work Deep Learning into your classroom?"
+    "\n",
+    "# https://goo.gl/3Go4F1"
    ]
   }
  ],
