changed table heading

--- a/Getting Started with conx.ipynb
+++ b/Getting Started with conx.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "As a demonstration, let's build a simple network for learning the XOR (exclusive or). XOR is defined as:\n",
     "\n",
-    "Input 1 | Input 2 | Output\n",
+    "Input 1 | Input 2 | XOR\n",
     "--------|---------|-------\n",
     " 0      | 0       | 0\n",
     " 0      | 1       | 1\n",
