Updated agenda with food/snack note.

--- a/collections/sigcse-2018/00_Agenda.ipynb
+++ b/collections/sigcse-2018/00_Agenda.ipynb
@@ -18,13 +18,14 @@
    "source": [
     "**Agenda**\n",
     "\n",
-    "1. [Introductions](01_Introductions.ipynb) - Doug Blank (20 minutes) 0:20\n",
-    "2. [Getting Started with Conx](02_Conx.ipynb) - Lisa Meeden (30 minutes) 0:50\n",
-    "   *  Independent Work - all (10 minutes) 1:00\n",
-    "3. [Handwritten digit recognition](03_MNIST.ipynb) - Jim Marshall (30 Minutes) 1:30\n",
+    "1. [Introductions](01_Introductions.ipynb) - Doug Blank (20 minutes) 7:00-7:20\n",
+    "2. [Getting Started with Conx](02_Conx.ipynb) - Lisa Meeden (30 minutes) 7:20-7:50\n",
+    "   * Independent Work - all (10 minutes) 7:50-8:00\n",
+    "   * Snacks will be served between 8 and 9 outside the Market Fresh Cafe area outside rooms 309/310/311. \"Food starts to disappear the later it gets.\"\n",
+    "3. [Handwritten digit recognition](03_MNIST.ipynb) - Jim Marshall (30 Minutes) 8:00-8:30\n",
     "  * Vision, the MNIST Dataset, and Convolution\n",
-    "  * Independent Work - all (15 minutes) 1:45\n",
-    "4. Datasets and Variations - Doug Blank (30 Minutes) 2:15\n",
+    "  * Independent Work - all (15 minutes) 8:30-8:45\n",
+    "4. Datasets and Variations - Doug Blank (30 Minutes) 8:45-9:15\n",
     "  * Datasets:\n",
     "    * CMU Faces - faces and poses\n",
     "    * CIFAR - 10 and 100 object recognition\n",
@@ -33,12 +34,14 @@
     "    * Text Generation - text generation\n",
     "    * AlphaZero - best game-playing program in the world\n",
     "    * Deep Dreams - generate images\n",
-    "5. Independent Work - All (15 minutes) 2:30\n",
-    "6. Discussion - All (30 minutes) 3:00\n",
+    "5. Independent Work - All (15 minutes) 9:15-9:30\n",
+    "6. Discussion - All (30 minutes) 9:30-10:00\n",
     "  * How can you work Deep Learning into your classroom?\n",
-    "  * lesson plans\n",
-    "  * projects\n",
-    "  * activities\n",
+    "  * Lesson plans\n",
+    "  * Projects\n",
+    "  * Activities\n",
+    "  \n",
+    "Please fill out the SIGCSE survey:\n",
     "\n",
     "# https://goo.gl/3Go4F1"
    ]
