Agenda done, with links to some notebooks

--- a/collections/sigcse-2018/00_Agenda.ipynb
+++ b/collections/sigcse-2018/00_Agenda.ipynb
@@ -19,21 +19,27 @@
     "**Agenda**\n",
     "\n",
     "1. [Introductions](01_Introductions.ipynb) - Doug Blank (20 minutes) 7:00-7:20\n",
-    "2. [Getting Started with Conx](02_Conx.ipynb) - Lisa Meeden (30 minutes) 7:20-7:50\n",
+    "2. [Getting Started with Conx](../../Getting Started with conx.ipynb) - Lisa Meeden (30 minutes) 7:20-7:50\n",
     "   * Independent Work - all (10 minutes) 7:50-8:00\n",
     "   * Snacks will be served between 8 and 9 outside the Market Fresh Cafe area outside rooms 309/310/311. \"Food starts to disappear the later it gets.\"\n",
-    "3. [Handwritten digit recognition](03_MNIST.ipynb) - Jim Marshall (30 Minutes) 8:00-8:30\n",
+    "3. [Handwritten digit recognition](../../MNIST.ipynb) - Jim Marshall (30 Minutes) 8:00-8:30\n",
     "  * Vision, the MNIST Dataset, and Convolution\n",
     "  * Independent Work - all (15 minutes) 8:30-8:45\n",
-    "4. Datasets and Variations - Doug Blank (30 Minutes) 8:45-9:15\n",
+    "4. Utilities, Datasets, and Variations - Doug Blank (30 Minutes) 8:45-9:15\n",
+    "  * Utilities:\n",
+    "    * [Time Travel and Making movies](../../Learning.ipynb)\n",
+    "    * [Plotting](../../Plotting.ipynb)\n",
+    "    * [Reference](../../Utilities.ipynb)\n",
     "  * Datasets:\n",
-    "    * CMU Faces - faces and poses\n",
-    "    * CIFAR - 10 and 100 object recognition\n",
-    "    * Fingers - fingers and counts\n",
+    "    * [CMU Faces](../../Face recognition.ipynb) - faces and poses\n",
+    "    * [CIFAR](../../CIFAR10_CNN.ipynb) - 10 and 100 object recognition\n",
+    "    * [Fingers](work-in-progress/FingersDataset.ipynb) - fingers and counts\n",
     "   * Other models:\n",
-    "    * Text Generation - text generation\n",
-    "    * AlphaZero - best game-playing program in the world\n",
-    "    * Deep Dreams - generate images\n",
+    "    * [Robot Simulation](../../Robot Simulation.ipynb)\n",
+    "    * [Text Prediction and Generation](../../Predicting and Generating Texts.ipynb) - text generation\n",
+    "    * [Recommending Movies](../../RecommendingMovies.ipynb)\n",
+    "    * [AlphaZero](../../work-in-progress/AlphaZero.ipynb) - best game-playing program in the world\n",
+    "    * [Deep Dreams](../../work-in-progress/DeepDreams.ipynb) - generate images\n",
     "5. Independent Work - All (15 minutes) 9:15-9:30\n",
     "6. Discussion - All (30 minutes) 9:30-10:00\n",
     "  * How can you work Deep Learning into your classroom?\n",
@@ -45,6 +51,13 @@
     "\n",
     "# https://goo.gl/3Go4F1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
