Fixes in Agenda, Deep Dreams, Predicting text (typo)

--- a/collections/sigcse-2018/00_Agenda.ipynb
+++ b/collections/sigcse-2018/00_Agenda.ipynb
@@ -33,7 +33,7 @@
     "  * Datasets:\n",
     "    * [CMU Faces](../../Face recognition.ipynb) - faces and poses\n",
     "    * [CIFAR](../../CIFAR10_CNN.ipynb) - 10 and 100 object recognition\n",
-    "    * [Fingers](work-in-progress/FingersDataset.ipynb) - fingers and counts\n",
+    "    * [Fingers](../../work-in-progress/FingersDataset.ipynb) - fingers and counts\n",
     "   * Other models:\n",
     "    * [Robot Simulation](../../Robot Simulation.ipynb)\n",
     "    * [Text Prediction and Generation](../../Predicting and Generating Texts.ipynb) - text generation\n",
