--- a/Predicting and Generating Texts.ipynb
+++ b/Predicting and Generating Texts.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Predicting and Generating Texts\n",
     "\n",
-    "<p>This notebook explores the idea of predicting items in a sequence, and then using those predictions to generate new sequences based on the probabilities. sdhgsf&nbsp;</p>\n"
+    "This notebook explores the idea of predicting items in a sequence, and then using those predictions to generate new sequences based on the probabilities.\n"
    ]
   },
   {
