Fixed some index errors in Epirob

--- a/work-in-progress/Epirob 2017.ipynb
+++ b/work-in-progress/Epirob 2017.ipynb
@@ -1921,12 +1921,12 @@
     "            print(input_g)\n",
     "\n",
     "def test_sensor_network(data, hid_dataset, sensor_dataset, sm_net, hid_size, recall_steps):\n",
-    "    hiddens = [x[0][:hid_size] for x in hid_dataset]\n",
+    "    hiddens = [x[0][0] for x in hid_dataset]\n",
     "    sm_targets = [x[1] for x in sensor_dataset]\n",
     "    for goal_num in range(len(data[\"goal\"])): # for each goal\n",
     "        for step in range(recall_steps): # for each step\n",
     "            output = sm_net.propagate_from(\"hidden\", hiddens[goal_num * (recall_steps) + step])\n",
-    "            print(goal_num, step, sm_targets[goal_num * (recall_steps + 1) + step][-2:], output[-2:])\n",
+    "            print(goal_num, step, sm_targets[goal_num * (recall_steps + 1) + step][1], output[1])\n",
     "\n",
     "def render_step_behavior(data, start, stop):\n",
     "    sim = make_sim()\n",
@@ -1996,7 +1996,7 @@
     "    sensor_dist = 0\n",
     "    goal_dist = 0\n",
     "    hid_dist = 0\n",
-    "    hidden_goal = hid_dataset[goal_num * recall_steps][0][0]\n",
+    "    hidden_goal = hid_dataset[goal_num * recall_steps][0][1]\n",
     "    # put robot at initial pose:\n",
     "    robot.setPose(*pose)\n",
     "    robot.stall = stall\n",
@@ -2006,16 +2006,16 @@
     "    motor_t0 = [0.0, 0.0]\n",
     "    inputs = [sensor_t0, motor_t0]\n",
     "    hidden = sm_net.propagate_to(\"hidden\", inputs)\n",
-    "    h1 = hid_net.propagate([hidden, hidden_goal])[1]\n",
-    "    if check and list(hidden_goal) != list(hid_dataset[goal_num * recall_steps][0][0]):\n",
+    "    h1 = hid_net.propagate([hidden, hidden_goal])[0]\n",
+    "    if check and list(hidden_goal) != list(hid_dataset[goal_num * recall_steps][0][1]):\n",
     "        print(goal_num, \"hidden_goal is wrong!\")\n",
     "        print(hidden_goal)\n",
-    "        print(hid_dataset[goal_num * recall_steps][0][hidden_size:])\n",
+    "        print(hid_dataset[goal_num * recall_steps][0][1])\n",
     "        return\n",
     "    if check and list(hidden) != list(hid_dataset[goal_num * recall_steps][0][0]):\n",
     "        print(goal_num, \"initial hidden wrong!\")\n",
     "        print(hidden)\n",
-    "        print(hid_dataset[goal_num * recall_steps][0][1])\n",
+    "        print(hid_dataset[goal_num * recall_steps][0][0])\n",
     "        return\n",
     "    px, py = robot._gx, robot._gy\n",
     "    for i in range(recall_steps):\n",
@@ -2025,7 +2025,7 @@
     "        if i == 0:\n",
     "            # don't really move, that should be no-op\n",
     "            motor_output = [0.0, 0.0]\n",
-    "        #print(goal_num, i, sm_dataset[goal_num * sm_step + i][0][-2:], motor_output)\n",
+    "        #print(goal_num, i, sm_dataset[goal_num * sm_step + i][0][1], motor_output)\n",
     "        motor_dist += distance(sm_dataset[goal_num * sm_step + i][0][1], motor_output)\n",
     "        sensor_dist += distance(sm_dataset[goal_num * sm_step + i][0][0], sensor_output)\n",
     "        robot.move(*motor_output)\n",
@@ -2039,10 +2039,10 @@
     "        hid_net_output = hid_net.propagate([hidden, hidden_goal])\n",
     "        h1 = hid_net_output[0]\n",
     "        goal_out = hid_net_output[1]\n",
-    "        hid_dist += distance(hid_dataset[goal_num*recall_steps+i][1][1] , h1)\n",
-    "        goal_dist += distance(hid_dataset[goal_num*recall_steps+i][1][0] , goal_out)\n",
+    "        hid_dist += distance(hid_dataset[goal_num*recall_steps+i][1][0] , h1)\n",
+    "        goal_dist += distance(hid_dataset[goal_num*recall_steps+i][1][1] , goal_out)\n",
     "        #if check:\n",
-    "        #    print(goal_num, i, \"motor:\", sm_dataset[goal_num * sm_step + i][0][-2:], motor_output, motor_dist)\n",
+    "        #    print(goal_num, i, \"motor:\", sm_dataset[goal_num * sm_step + i][0][1], motor_output, motor_dist)\n",
     "    end_state_dist += distance(data[\"step\"][step+1]['sense'], read_sensors(sim))\n",
     "    if render:\n",
     "        canvas.drawArrow(robot._gx, robot._gy, robot._ga, size=0.1, fill=color, outline=color)\n",
@@ -2186,7 +2186,7 @@
     "        goal_memory.append({\n",
     "            \"goal_num\": goal_num,\n",
     "            \"matched\": 1 if goal_num not in include else 1000, # HACK to include special\n",
-    "            \"goal\": hid_dataset[goal_num * recall_steps][0][hidden_size:]\n",
+    "            \"goal\": hid_dataset[goal_num * recall_steps][0][1]\n",
     "        })\n",
     "    for (goal_num, step, interest) in data[\"match\"]:\n",
     "        goal_memory[goal_num][\"matched\"] += 1\n",
