Alice in Wonderland, SimpleRNNLayer with unroll=True

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -42,7 +42,8 @@
     "  20. [Experiments](Experiments.ipynb)\n",
     "  21. [Making Movies](MakingMovies.ipynb)\n",
     "  22. [PCA](PCA.ipynb)\n",
-    "  23. [Utilities](Utilities.ipynb)"
+    "  23. [Utilities](Utilities.ipynb)\n",
+    "  24. [Alice in Wonderland](AliceInWonderLand.ipynb)"
    ]
   }
  ],
