Moved Practice to collections/sigcse-2018; added Alice in Wonderland to index

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -30,20 +30,20 @@
     "  8. [Plotting](Plotting.ipynb)\n",
     "  9. [Plotting in 3D](Plot3D.ipynb)\n",
     "  10. [Autoencoding](Autoencoder.ipynb)\n",
-    "  11. [Predicting and Generating Texts](Predicting and Generating Texts.ipynb)\n",
-    "  12. [Recommending Movies](RecommendingMovies.ipynb)\n",
-    "  13. [LSTM - Long Short Term Memory](LSTM.ipynb)\n",
-    "  14. [Activation Functions](ActivationFunctions.ipynb)\n",
-    "  15. [Gridfonts](Gridfonts.ipynb)\n",
-    "  16. [Working with Camera and Networks](Camera.ipynb)\n",
-    "  17. [Robot Simulation](Robot Simulation.ipynb)\n",
-    "  18. [Extrapolation, 1](Extrapolation1.ipynb)\n",
-    "  19. [Vision Quest](VisionQuest.ipynb)\n",
-    "  20. [Experiments](Experiments.ipynb)\n",
-    "  21. [Making Movies](MakingMovies.ipynb)\n",
-    "  22. [PCA](PCA.ipynb)\n",
-    "  23. [Utilities](Utilities.ipynb)\n",
-    "  24. [Alice in Wonderland](AliceInWonderLand.ipynb)"
+    "  11. [Alice in Wonderland](AliceInWonderLand.ipynb)\n"
+    "  12. [Predicting and Generating Texts](Predicting and Generating Texts.ipynb)\n",
+    "  13. [Recommending Movies](RecommendingMovies.ipynb)\n",
+    "  14. [LSTM - Long Short Term Memory](LSTM.ipynb)\n",
+    "  15. [Activation Functions](ActivationFunctions.ipynb)\n",
+    "  16. [Gridfonts](Gridfonts.ipynb)\n",
+    "  17. [Working with Camera and Networks](Camera.ipynb)\n",
+    "  18. [Robot Simulation](Robot Simulation.ipynb)\n",
+    "  19. [Extrapolation, 1](Extrapolation1.ipynb)\n",
+    "  20. [Vision Quest](VisionQuest.ipynb)\n",
+    "  21. [Experiments](Experiments.ipynb)\n",
+    "  22. [Making Movies](MakingMovies.ipynb)\n",
+    "  23. [PCA](PCA.ipynb)\n",
+    "  24. [Utilities](Utilities.ipynb)",
    ]
   }
  ],
