--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -43,7 +43,8 @@
     "  21. [Experiments](Experiments.ipynb)\n",
     "  22. [Making Movies](MakingMovies.ipynb)\n",
     "  23. [PCA](PCA.ipynb)\n",
-    "  24. [Utilities](Utilities.ipynb)",
+    "  24. [Utilities](Utilities.ipynb)\n",
+    "  25. [Two-Spirals](Two-Spirals.ipynb)",
    ]
   }
  ],
