Editing JSON by hand is dangerous

--- a/00_Index.ipynb
+++ b/00_Index.ipynb
@@ -30,7 +30,7 @@
     "  8. [Plotting](Plotting.ipynb)\n",
     "  9. [Plotting in 3D](Plot3D.ipynb)\n",
     "  10. [Autoencoding](Autoencoder.ipynb)\n",
-    "  11. [Alice in Wonderland](AliceInWonderLand.ipynb)\n"
+    "  11. [Alice in Wonderland](AliceInWonderLand.ipynb)\n",
     "  12. [Predicting and Generating Texts](Predicting and Generating Texts.ipynb)\n",
     "  13. [Recommending Movies](RecommendingMovies.ipynb)\n",
     "  14. [LSTM - Long Short Term Memory](LSTM.ipynb)\n",
@@ -44,7 +44,7 @@
     "  22. [Making Movies](MakingMovies.ipynb)\n",
     "  23. [PCA](PCA.ipynb)\n",
     "  24. [Utilities](Utilities.ipynb)\n",
-    "  25. [Two-Spirals](Two-Spirals.ipynb)",
+    "  25. [Two-Spirals](Two-Spirals.ipynb)"
    ]
   }
  ],
