Renamed 'raw' to 'sequence'

--- a/LSTM Text Generation.ipynb
+++ b/LSTM Text Generation.ipynb
@@ -22,25 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n",
-      "Conx, version 3.7.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import conx as cx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +66,7 @@
        "600893"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +86,7 @@
        "'preface\\n\\n\\nsupposing that truth is a woman--what then? is there not ground\\nfor suspecting that all ph'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +124,7 @@
        "'\\n !\"\\'(),-.0123456789:;=?[]_abcdefghijklmnopqrstuvwxyzäæéë'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +211,7 @@
        " 'uth is a woman--what then? is there not g']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +231,7 @@
        "41"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +251,7 @@
        "(200284, 40, 57)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +278,7 @@
        "[False, False, True, False, False]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +338,7 @@
        "(200284, 40, 57)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +358,7 @@
        "(200284, 57)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -432,62 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef88a5097fdc46b0919978f1bf03ca46",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dashboard(children=(Accordion(children=(HBox(children=(VBox(children=(Select(description='Dataset:', index=1, …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "require(['base/js/namespace'], function(Jupyter) {\n",
-       "    Jupyter.notebook.kernel.comm_manager.register_target('conx_svg_control', function(comm, msg) {\n",
-       "        comm.on_msg(function(msg) {\n",
-       "            console.log(\"received!\")\n",
-       "            console.log(msg)\n",
-       "            var data = msg[\"content\"][\"data\"];\n",
-       "            var images = document.getElementsByClassName(data[\"class\"]);\n",
-       "            for (var i = 0; i < images.length; i++) {\n",
-       "                if (data[\"xlink:href\"]) {\n",
-       "                    var xlinkns=\"http://www.w3.org/1999/xlink\";\n",
-       "                    images[i].setAttributeNS(xlinkns, \"href\", data[\"xlink:href\"]);\n",
-       "                }\n",
-       "                if (data[\"src\"]) {\n",
-       "                    images[i].setAttributeNS(null, \"src\", data[\"src\"]);\n",
-       "                }\n",
-       "            }\n",
-       "        });\n",
-       "    });\n",
-       "});\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "net.dashboard()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,72 +468,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('æ', 0.02),\n",
-       " ('z', 0.02),\n",
-       " ('9', 0.02),\n",
-       " ('c', 0.02),\n",
-       " ('b', 0.02),\n",
-       " ('g', 0.02),\n",
-       " ('r', 0.02),\n",
-       " ('m', 0.02),\n",
-       " (']', 0.02),\n",
-       " ('e', 0.02),\n",
-       " ('!', 0.02),\n",
-       " ('v', 0.02),\n",
-       " ('w', 0.02),\n",
-       " ('[', 0.02),\n",
-       " ('f', 0.02),\n",
-       " ('d', 0.02),\n",
-       " ('n', 0.02),\n",
+       "[('é', 0.02),\n",
        " (';', 0.02),\n",
-       " ('s', 0.02),\n",
+       " ('d', 0.02),\n",
+       " (']', 0.02),\n",
        " ('\\n', 0.02),\n",
-       " ('i', 0.02),\n",
-       " ('t', 0.02),\n",
-       " ('_', 0.02),\n",
-       " ('=', 0.02),\n",
-       " ('\"', 0.02),\n",
-       " ('é', 0.02),\n",
-       " ('7', 0.02),\n",
-       " (',', 0.02),\n",
-       " ('ë', 0.02),\n",
-       " ('u', 0.02),\n",
-       " (')', 0.02),\n",
-       " ('1', 0.02),\n",
-       " ('5', 0.02),\n",
+       " ('y', 0.02),\n",
+       " ('z', 0.02),\n",
+       " ('m', 0.02),\n",
+       " ('a', 0.02),\n",
+       " ('2', 0.02),\n",
+       " ('k', 0.02),\n",
        " (':', 0.02),\n",
-       " ('0', 0.02),\n",
+       " ('n', 0.02),\n",
+       " ('_', 0.02),\n",
+       " ('o', 0.02),\n",
+       " ('l', 0.02),\n",
        " ('3', 0.02),\n",
-       " ('-', 0.02),\n",
-       " ('?', 0.02),\n",
+       " ('p', 0.02),\n",
        " ('x', 0.02),\n",
        " (' ', 0.02),\n",
-       " ('8', 0.02),\n",
-       " ('.', 0.02),\n",
-       " ('y', 0.02),\n",
-       " ('k', 0.02),\n",
+       " ('v', 0.02),\n",
+       " ('t', 0.02),\n",
+       " ('æ', 0.02),\n",
+       " ('c', 0.02),\n",
        " ('(', 0.02),\n",
-       " ('o', 0.02),\n",
-       " (\"'\", 0.02),\n",
-       " ('a', 0.02),\n",
-       " ('h', 0.02),\n",
-       " ('q', 0.02),\n",
-       " ('l', 0.02),\n",
-       " ('p', 0.02),\n",
-       " ('2', 0.02),\n",
+       " ('9', 0.02),\n",
+       " ('j', 0.02),\n",
+       " ('ë', 0.02),\n",
+       " ('?', 0.02),\n",
        " ('6', 0.02),\n",
-       " ('4', 0.02),\n",
+       " ('e', 0.02),\n",
+       " ('g', 0.02),\n",
+       " ('h', 0.02),\n",
+       " ('1', 0.02),\n",
+       " ('=', 0.02),\n",
+       " ('i', 0.02),\n",
+       " (',', 0.02),\n",
+       " ('!', 0.02),\n",
+       " ('r', 0.02),\n",
+       " ('f', 0.02),\n",
+       " ('w', 0.02),\n",
+       " ('b', 0.02),\n",
+       " ('u', 0.02),\n",
+       " ('.', 0.02),\n",
+       " ('[', 0.02),\n",
+       " ('5', 0.02),\n",
+       " (')', 0.02),\n",
        " ('ä', 0.02),\n",
-       " ('j', 0.02)]"
+       " ('8', 0.02),\n",
+       " ('\"', 0.02),\n",
+       " ('q', 0.02),\n",
+       " (\"'\", 0.02),\n",
+       " ('0', 0.02),\n",
+       " ('-', 0.02),\n",
+       " ('7', 0.02),\n",
+       " ('s', 0.02),\n",
+       " ('4', 0.02)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,6 +583,44 @@
     "        s.write(\"\\n\")\n",
     "    clear_output()\n",
     "    print(s.getvalue())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating initial training metrics...\n",
+      "Training...\n",
+      "       |  Training |  Training \n",
+      "Epochs |     Error |  Accuracy \n",
+      "------ | --------- | --------- \n",
+      "#    0 |   4.04202 |   0.02643 \n",
+      "#    1 |   2.00208 |   0.41688 \n",
+      "========================================================\n",
+      "#    1 |   2.00208 |   0.41688 \n",
+      "CPU times: user 9min 12s, sys: 1min 16s, total: 10min 28s\n",
+      "Wall time: 3min 29s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "session = tf.Session( config = tf.ConfigProto(log_device_placement=True))\n",
+    "net.train(1, batch_size=128, plot=False)"
    ]
   },
   {
