--- a/VAE.ipynb
+++ b/VAE.ipynb
@@ -378,7 +378,7 @@
     }
    ],
    "source": [
-    "net.propagate(net.dataset._inputs[0], raw=True)"
+    "net.propagate(net.dataset._inputs[0], sequence=True)"
    ]
   },
   {
